specify z-index on logo container so that it's clickable above nav menu. fixes #112

--- a/app/assets/stylesheets/site/modules/m-site-header.scss
+++ b/app/assets/stylesheets/site/modules/m-site-header.scss
@@ -10,12 +10,12 @@
   text-transform: uppercase;
   font-size: 1.2em;
   margin:0;
-  margin-top: 7px;
   line-height: 1.1;
   max-width:100px;
   margin-left:80px;
   margin-top: 40px;
   position: absolute;
+  z-index: 10;
 }
 
 .m-site-header .logo a {
